force-app/main/default/objects/FSAM_Service_Request__c/FSAM_Service_Request__c.object-meta.xml
<CustomObject>
    <label>FSAM Service Request</label>
    <nameField>
        <displayFormat>SR-{00000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FSAM Service Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>