force-app/main/default/objects/FSAM_Service_Request__c/fields/FSAM_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Closed_Date__c</fullName>
    <description>Date and time when the request was closed.</description>
    <label>Closed Date</label>
    <type>DateTime</type>
</CustomField>