force-app/main/default/objects/FSAM_Service_Request__c/fields/FSAM_Customer_Asset__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Customer_Asset__c</fullName>
    <description>Every request belongs to one installed asset.</description>
    <label>FSAM Customer Asset</label>
    <referenceTo>FSAM_Customer_Asset__c</referenceTo>
    <relationshipLabel>FSAM Service Requests</relationshipLabel>
    <relationshipName>FSAM_Service_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>