force-app/main/default/objects/FSAM_Service_Request__c/fields/FSAM_Description__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Description__c</fullName>
    <description>Detailed description of the reported issue.</description>
    <inlineHelpText>Provide detailed information about the reported problem.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>