force-app/main/default/objects/FSAM_Service_Request__c/fields/FSAM_External_Request_ID__c.field-meta.xml
<CustomField>
    <fullName>FSAM_External_Request_ID__c</fullName>
    <description>Identifier received from external systems.</description>
    <externalId>true</externalId>
    <label>External Request ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>