force-app/main/default/objects/FSAM_Service_Request__c/fields/FSAM_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Open_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Date and time when the request was created.</description>
    <label>Open Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>