force-app/main/default/objects/FSAM_Service_Request__c/fields/FSAM_Priority__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Priority__c</fullName>
    <description>Business priority of the service request.</description>
    <inlineHelpText>Select the priority based on business impact.</inlineHelpText>
    <label>Priority</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>