force-app/main/default/objects/FSAM_Service_Request__c/fields/FSAM_Resolution__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Resolution__c</fullName>
    <description>Resolution provided by the engineer.</description>
    <inlineHelpText>Describe how the issue was resolved.</inlineHelpText>
    <label>Resolution</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>