force-app/main/default/objects/FSAM_Service_Request__c/fields/FSAM_SLA_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>FSAM_SLA_Due_Date__c</fullName>
    <description>Latest time by which the request should be resolved.</description>
    <label>SLA Due Date</label>
    <type>DateTime</type>
</CustomField>