force-app/main/default/objects/FSAM_Service_Request__c/fields/FSAM_Subject__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Subject__c</fullName>
    <description>Short summary of the customer&apos;s issue.</description>
    <inlineHelpText>Enter a concise description of the reported issue.</inlineHelpText>
    <label>Subject</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>