force-app/main/default/objects/FSAM_Service_Request__c/fields/FSAM_Total_Maintenance_Visits__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Total_Maintenance_Visits__c</fullName>
    <description>Shows how many maintenance visits have been recorded against a Service Request.</description>
    <label>Total Maintenance Visits</label>
    <summaryForeignKey>FSAM_Maintenance_Visit__c.FSAM_Service_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>