force-app/main/default/objects/FSAM_Service_Request__c/fields/FSAM_Total_Parts_Cost__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Total_Parts_Cost__c</fullName>
    <label>Total Parts Cost</label>
    <summarizedField>FSAM_Part_Replacement__c.FSAM_Total_Cost__c</summarizedField>
    <summaryForeignKey>FSAM_Part_Replacement__c.FSAM_Service_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>