force-app/main/default/objects/FSAM_Service_Request__c/validationRules/FSAM_VR_Closed_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>FSAM_VR_Closed_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISPICKVAL( FSAM_Status__c , &quot;Closed&quot;),
 ISBLANK( FSAM_Closed_Date__c )  
)</errorConditionFormula>
    <errorDisplayField>FSAM_Closed_Date__c</errorDisplayField>
    <errorMessage>Closed Date is required when the request status is Closed.</errorMessage>
</ValidationRule>