force-app/main/default/objects/FSAM_Service_Request__c/validationRules/FSAM_VR_Resolution.validationRule-meta.xml
<ValidationRule>
    <fullName>FSAM_VR_Resolution</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(FSAM_Status__c, &quot;Closed&quot;),
    ISBLANK(FSAM_Resolution__c)
)</errorConditionFormula>
    <errorDisplayField>FSAM_Resolution__c</errorDisplayField>
    <errorMessage>Resolution is required before closing the service request.</errorMessage>
</ValidationRule>