force-app/main/default/objects/FSAM_Service_Request__c/validationRules/FSAM_VR_SLA_Due_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>FSAM_VR_SLA_Due_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(FSAM_SLA_Due_Date__c)),
    FSAM_SLA_Due_Date__c &lt; FSAM_Open_Date__c
)</errorConditionFormula>
    <errorDisplayField>FSAM_SLA_Due_Date__c</errorDisplayField>
    <errorMessage>SLA Due Date must be on or after the Open Date.</errorMessage>
</ValidationRule>