force-app/main/default/objects/FSAM_Service_Request__c/listViews/Completed_Requests.listView-meta.xml
<ListView>
    <fullName>Completed_Requests</fullName>
    <columns>FSAM_Subject__c</columns>
    <columns>FSAM_Customer_Asset__c</columns>
    <columns>FSAM_Priority__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>FSAM_Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>Completed Requests</label>
</ListView>