force-app/main/default/objects/FSAM_Service_Request__c/listViews/High_Priority_Requests.listView-meta.xml
<ListView>
    <fullName>High_Priority_Requests</fullName>
    <columns>FSAM_Subject__c</columns>
    <columns>FSAM_Customer_Asset__c</columns>
    <columns>FSAM_Priority__c</columns>
    <columns>FSAM_Status__c</columns>
    <columns>FSAM_SLA_Due_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>FSAM_Priority__c</field>
        <operation>equals</operation>
        <value>High,Critical</value>
    </filters>
    <filters>
        <field>FSAM_Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Closed</value>
    </filters>
    <label>High Priority Requests</label>
</ListView>