force-app/main/default/objects/FSAM_Service_Request__c/listViews/Open_Service_Requests.listView-meta.xml
<ListView>
    <fullName>Open_Service_Requests</fullName>
    <columns>NAME</columns>
    <columns>FSAM_Subject__c</columns>
    <columns>FSAM_Customer_Asset__c</columns>
    <columns>FSAM_Priority__c</columns>
    <columns>FSAM_Status__c</columns>
    <columns>FSAM_Open_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>FSAM_Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Closed,Cancelled</value>
    </filters>
    <label>Open Service Requests</label>
</ListView>